--- a/Html/Login.html
+++ b/Html/Login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>The Easiest Way to Add Input Masks to Your Forms</title>
+    <title></title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css"
       rel="stylesheet"
@@ -16,9 +16,12 @@
     <link rel="stylesheet" href="../Css/Base.css" />
     <link rel="stylesheet" href="../Css/Register.css" />
   </head>
+
+
   <body>
+
     <div class="registration-form">
-      <form action=".java">
+      <form id="LoginForm">
         <div class="form-icon">
           <span><i class="icon icon-user"></i></span>
         </div>
@@ -41,13 +44,13 @@
 
         <div class="form-group">
           <input type="checkbox" id="privacy" />
-          <label for="privay">
+          <label for="privacy">
             I agree to the <a href="/privacy-policy">Privacy Policy</a> and
             <a href="/terms">Terms of Service</a>.</label
           >
         </div>
         <div class="form-group">
-          <button type="button" class="btn btn-block create-account">
+          <button type="button" class="btn btn-block create-account" click="Login()">
             Login
           </button>
         </div>
