--- a/Html/Profile.html
+++ b/Html/Profile.html
@@ -10,13 +10,14 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <script src="../Javascript/profilo.js" defer></script>
     <link rel="stylesheet" href="../Css/Profile.css" />
   </head>
-  <body>
+  <body onload="loadProfile()">
     <div class="container">
       <div class="main-body">
         <div class="row gutters-sm">
-          <div class=" mb-3">
+          <div class="mb-3">
             <div class="card">
               <div class="card-body">
                 <div class="d-flex flex-column align-items-center text-center">
@@ -27,11 +28,9 @@
                     width="150"
                   />
                   <div class="mt-3">
-                    <h4>John Doe</h4>
-                    <p class="text-muted font-size-sm">
-                      Bay Area, San Francisco, CA
-                    </p>
-                    <button class="btn btn-outline-primary">Logout</button>
+                    <h4 id="user-name"></h4> 
+                    <p class="text-muted font-size-sm" id="user-location">Bay Area, San Francisco, CA</p> <!-- Location dinamica -->
+                    <button class="btn btn-outline-primary" id="logoutButton" style="display:none">Logout</button>
                   </div>
                 </div>
               </div>
@@ -44,37 +43,35 @@
                   <div class="col-sm-3">
                     <h6 class="mb-0">Name</h6>
                   </div>
-                  <div class="col-sm-9 text-sm-end text-secondary">Kenneth</div>
+                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-name">Kenneth</div> <!-- Nome dinamico -->
                 </div>
                 <hr />
                 <div class="row">
                   <div class="col-sm-3">
                     <h6 class="mb-0">Surname</h6>
                   </div>
-                  <div class="col-sm-9 text-sm-end text-secondary">Valdez</div>
+                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-surname">Valdez</div> <!-- Cognome dinamico -->
                 </div>
                 <hr />
                 <div class="row">
                   <div class="col-sm-3">
                     <h6 class="mb-0">Email</h6>
                   </div>
-                  <div class="col-sm-9 text-sm-end text-secondary">fip@jukmuh.al</div>
+                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-email">fip@jukmuh.al</div> <!-- Email dinamica -->
                 </div>
                 <hr />
                 <div class="row">
                   <div class="col-sm-3">
                     <h6 class="mb-0">Partita IVA</h6>
                   </div>
-                  <div class="col-sm-9 text-sm-end text-secondary">FR 89 128370925</div>
+                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-piva">FR 89 128370925</div> <!-- Partita IVA dinamica -->
                 </div>
                 <hr />
                 <div class="row">
                   <div class="col-sm-3">
-                    <h6 class="mb-0">Address</h6>
+                    <h6 class="mb-0">Username</h6>
                   </div>
-                  <div class="col-sm-9 text-sm-end text-secondary">
-                    Bay Area, San Francisco, CA
-                  </div>
+                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-username">annina87</div> <!-- Username dinamico -->
                 </div>
                 <hr />
                 <div class="row">
@@ -90,7 +87,6 @@
               </div>
             </div>
           </div>
-          
         </div>
       </div>
     </div>
