--- a/Html/Login.html
+++ b/Html/Login.html
@@ -29,8 +29,8 @@
           <input
             type="text"
             class="form-control item"
-            id="email"
-            placeholder="Email"
+            id="username"
+            placeholder="Username"
           />
         </div>
         <div class="form-group">
@@ -50,7 +50,7 @@
           >
         </div>
         <div class="form-group">
-          <button type="button" class="btn btn-block create-account" click="Login()">
+          <button type="submit" class="btn btn-block create-account">
             Login
           </button>
         </div>
@@ -72,7 +72,6 @@
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"
     ></script>
-    <script src="assets/js/script.js"></script>
     <script src="../Javascript/Login.js"></script>
   </body>
 </html>
