--- a/Html/Profile.html
+++ b/Html/Profile.html
@@ -10,10 +10,9 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <script src="../Javascript/profilo.js" defer></script>
     <link rel="stylesheet" href="../Css/Profile.css" />
   </head>
-  <body onload="loadProfile()">
+  <body>
     <div class="container">
       <div class="main-body">
         <div class="row gutters-sm">
@@ -29,8 +28,7 @@
                   />
                   <div class="mt-3">
                     <h4 id="user-name"></h4> 
-                    <p class="text-muted font-size-sm" id="user-location">Bay Area, San Francisco, CA</p> <!-- Location dinamica -->
-                    <button class="btn btn-outline-primary" id="logoutButton" style="display:none">Logout</button>
+                    <button class="btn btn-outline-primary" id="logoutButton" onClick="logoutFunction()">Logout</button>
                   </div>
                 </div>
               </div>
@@ -43,35 +41,35 @@
                   <div class="col-sm-3">
                     <h6 class="mb-0">Name</h6>
                   </div>
-                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-name">Kenneth</div> <!-- Nome dinamico -->
+                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-name"></div> <!-- Nome dinamico -->
                 </div>
                 <hr />
                 <div class="row">
                   <div class="col-sm-3">
                     <h6 class="mb-0">Surname</h6>
                   </div>
-                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-surname">Valdez</div> <!-- Cognome dinamico -->
+                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-surname"></div> <!-- Cognome dinamico -->
                 </div>
                 <hr />
                 <div class="row">
                   <div class="col-sm-3">
                     <h6 class="mb-0">Email</h6>
                   </div>
-                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-email">fip@jukmuh.al</div> <!-- Email dinamica -->
+                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-email"></div> <!-- Email dinamica -->
                 </div>
                 <hr />
                 <div class="row">
                   <div class="col-sm-3">
                     <h6 class="mb-0">Partita IVA</h6>
                   </div>
-                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-piva">FR 89 128370925</div> <!-- Partita IVA dinamica -->
+                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-piva"></div> <!-- Partita IVA dinamica -->
                 </div>
                 <hr />
                 <div class="row">
                   <div class="col-sm-3">
                     <h6 class="mb-0">Username</h6>
                   </div>
-                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-username">annina87</div> <!-- Username dinamico -->
+                  <div class="col-sm-9 text-sm-end text-secondary" id="profile-username"></div> <!-- Username dinamico -->
                 </div>
                 <hr />
                 <div class="row">
