--- a/Html/Login.html
+++ b/Html/Login.html
@@ -53,6 +53,7 @@
           <button type="submit" class="btn btn-block create-account">
             Login
           </button>
+          <p class="text-center">Non hai un account? <a href="Register.html">Registrati</a></p>
         </div>
       </form>
       <div class="social-media">
