--- a/Html/Register.html
+++ b/Html/Register.html
@@ -12,37 +12,39 @@
 </head>
 <body>
     <div class="registration-form">
-        <form action=".java">
+        <form id="register-form">
             <div class="form-icon">
                 <span><i class="icon icon-user"></i></span>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control item" id="name" placeholder="Name">
+                <input type="text" class="form-control item" id="name" placeholder="Name*">
             </div>
             <div class="form-group">
-                <input type="text" class="form-control item" id="surname" placeholder="Surname">
+                <input type="text" class="form-control item" id="surname" placeholder="Surname*">
             </div>
             <div class="form-group">
-                <input type="text" class="form-control item" id="username" placeholder="Username">
+                <input type="text" class="form-control item" id="username" placeholder="Username*">
             </div>
             <div class="form-group">
                 <input type="text" class="form-control item" id="piva" placeholder="Tax ID">
             </div>
             <div class="form-group">
-                <input type="text" class="form-control item" id="email" placeholder="Email">
+                <input type="text" class="form-control item" id="email" placeholder="Email*">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control item" id="password" placeholder="Password">
+                <input type="password" class="form-control item" id="password" placeholder="Password*">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control item" id="confirmPassword" placeholder="Confirm Password">
+                <input type="password" class="form-control item" id="confirmPassword" placeholder="Confirm Password*">
             </div>
             <div class="form-group">
                 <input type="checkbox" id="privacy">
                 <label for="privay"> I agree to the <a href="/privacy-policy">Privacy Policy</a> and <a href="/terms">Terms of Service</a>.</label>
+                <p>* Campi obbligatori</p>
             </div>
             <div class="form-group">
-                <button type="button" class="btn btn-block create-account">Create Account</button>
+                <button type="submit" class="btn btn-block create-account">Create Account</button>
+                <p class="text-center">Hai gia' un account? <a href="Login.html">Accedi</a></p>
             </div>
         </form>
         <div class="social-media">
